# pm-for-agents

./: README.md
agents/__dispute/: .dockerignore  Dockerfile  intended_flow.bpmn  intended_flow.md  pyproject.toml
agents/__dispute/src/: dispute_agent.py  system_prompt.md
agents/market_intel_graph/: .dockerignore  Dockerfile  build.sh  intended_flow.bpmn  mi_agent copy 2.py  mi_agent copy 3.py  mi_agent copy.py  pyproject.toml
agents/market_intel_graph/src/: mi_agent copy 2.py  mi_agent copy 3.py  mi_agent copy.py  mi_agent.py
agents/research_graph/: Dockerfile  README.me  build.sh  intended_flow.bpmn  intended_flow.md  pyproject.toml  traces.txt
agents/research_graph/src/: research_agent copy 2.py  research_agent copy 3.py  research_agent copy 4.py  research_agent copy.py  research_agent.py
agents/research_react/: .dockerignore  Dockerfile  build.sh  intended_flow-old.bpmn  intended_flow.bpmn  intended_flow.md  intended_flowOLD.bpmn  pyproject.toml
agents/research_react/src/: research_agent.py  system_prompt.md
agents/trusteeship/: Dockerfile  build.sh  intended_flow.bpmn  intended_flow.md  intended_flow_old.bpmn  pyproject.toml
agents/trusteeship/src/: system_prompt.md  (+1 more)
notebooks/: InstallPM4Py.ipynb  PMAnalysis-MarketIntel.ipynb  PMAnalysis-ResearchAgent.ipynb  PMAnalysis-Trusteeship.ipynb  PreparePMLogs.ipynb  TalkToAgent.ipynb  pmagent_util.py
notebooks/xeslogs/: market_intel_agent_DEFAULT_trace.xes  research_agent_react_DEFAULT_session.xes  research_agent_react_DEFAULT_trace.xes  trusteeship_application_agent_DEFAULT_application.xes
(+6 files in other folders)
