[project]
name = "tmls2026-dispute-agent"
version = "0.1.0"
description = "Strands agent on AWS Bedrock AgentCore handling credit-card-charge dispute processing, with DynamoDB-backed case state and OpenTelemetry tracing"
requires-python = ">=3.13"
dependencies = [
    "strands-agents[otel]>=0.1.0",
    "boto3>=1.40.47",
    "botocore>=1.40.47",
    "bedrock-agentcore>=0.1.7",
    "bedrock-agentcore-starter-toolkit>=0.1.22",
    "aws-opentelemetry-distro>=0.12.1",
]

[dependency-groups]
dev = []
